@@ -2,7 +2,7 @@
  * ========================LICENSE_START=================================
  * flyway-commandline
  * ========================================================================
- * Copyright (C) 2010 - 2024 Red Gate Software Ltd
+ * Copyright (C) 2010 - 2026 Red Gate Software Ltd
  * ========================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,9 @@
 package org.flywaydb.commandline.configuration;
 
 import java.io.File;
+import java.lang.reflect.Modifier;
+import java.util.stream.Stream;
+import lombok.CustomLog;
 import lombok.RequiredArgsConstructor;
 import org.flywaydb.commandline.logging.console.ConsoleLog.Level;
 import org.flywaydb.core.api.FlywayException;
@@ -27,10 +30,12 @@ import org.flywaydb.core.api.MigrationState;
 import org.flywaydb.core.api.MigrationVersion;
 import org.flywaydb.core.api.configuration.ClassicConfiguration;
 import org.flywaydb.core.extensibility.CommandExtension;
+import org.flywaydb.core.extensibility.ConfigurationExtension;
 import org.flywaydb.core.internal.configuration.models.EnvironmentModel;
 import org.flywaydb.core.internal.plugin.PluginRegister;
 import org.flywaydb.core.internal.util.FlywayDbWebsiteLinks;
 import org.flywaydb.core.internal.util.StringUtils;
+import org.flywaydb.mcp.McpCommandExtension;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -38,11 +43,11 @@ import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+@CustomLog
 public class CommandLineArguments {
     private static final String COMMUNITY_FALLBACK_FLAG = "-communityFallback";
     private static final String DEBUG_FLAG = "-X";
     private static final String QUIET_FLAG = "-q";
-    private static final String SUPPRESS_PROMPT_FLAG = "-n";
     private static final List<String> PRINT_VERSION_AND_EXIT_FLAGS = Arrays.asList("-v", "--version");
     private static final List<String> PRINT_USAGE_FLAGS = Arrays.asList("-?", "-h", "--help");
     private static final String SKIP_CHECK_FOR_UPDATE_FLAG = "-skipCheckForUpdate";
@@ -51,6 +56,8 @@ public class CommandLineArguments {
     // Command line specific configuration options
     private static final String OUTPUT_FILE = "outputFile";
     private static final String OUTPUT_TYPE = "outputType";
+
+    private static final String OUTPUT_LOGS_IN_JSON = "outputLogsInJson";
     private static final String CONFIG_FILE_ENCODING = "configFileEncoding";
     private static final String CONFIG_FILES = "configFiles";
     private static final String COLOR = "color";
@@ -60,14 +67,37 @@ public class CommandLineArguments {
     private static final String INFO_SINCE_VERSION = "infoSinceVersion";
     private static final String INFO_UNTIL_VERSION = "infoUntilVersion";
     private static final String INFO_OF_STATE = "infoOfState";
-    private static final Set<String> COMMAND_LINE_ONLY_OPTIONS = new HashSet<>(Arrays.asList(
-        OUTPUT_FILE, COLOR, WORKING_DIRECTORY, INFO_SINCE_DATE,
-        INFO_UNTIL_DATE, INFO_SINCE_VERSION, INFO_UNTIL_VERSION, INFO_OF_STATE));
+    private static final Collection<String> COMMAND_LINE_ONLY_OPTIONS = new HashSet<>(Arrays.asList(OUTPUT_FILE,
+        WORKING_DIRECTORY,
+        INFO_SINCE_DATE,
+        INFO_UNTIL_DATE,
+        INFO_SINCE_VERSION,
+        INFO_UNTIL_VERSION,
+        INFO_OF_STATE));
     private static final SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("dd/MM/yyyy HH:mm");
     private static final List<String> VALID_OPERATIONS_AND_FLAGS = getValidOperationsAndFlags();
 
     private final PluginRegister pluginRegister;
     private final String[] args;
+
+    private static Collection<String> getParametersByNamespace(final String namespace) {
+        return (new ClassicConfiguration()).getPluginRegister()
+            .getInstancesOf(ConfigurationExtension.class)
+            .stream()
+            .filter(p -> p.getNamespace().equalsIgnoreCase(namespace))
+            .flatMap(ext -> Arrays.stream(ext.getClass().getDeclaredFields())
+                .filter(field -> !(Modifier.isStatic(field.getModifiers())))
+                .flatMap(f -> {
+                    if (shouldNotExpand(f.getType())) {
+                        return Stream.of(f.getName());
+                    } else {
+                        return Arrays.stream(f.getType().getDeclaredFields())
+                            .filter(subfield -> !(Modifier.isStatic(subfield.getModifiers())))
+                            .map(subfield -> f.getName() + "." + subfield.getName());
+                    }
+                }))
+            .collect(Collectors.toList());
+    }
 
     public enum PrintUsage {
         PRINT_NONE,
@@ -75,21 +105,23 @@ public class CommandLineArguments {
         PRINT_SHORT
     }
 
-    public CommandLineArguments(PluginRegister pluginRegister, String... args) {
+    public CommandLineArguments(final PluginRegister pluginRegister, final String... args) {
         this.pluginRegister = pluginRegister;
-        this.args = Arrays.stream(args)
-            .filter(StringUtils::hasText)
-            .toArray(String[]::new);
+        this.args = Arrays.stream(args).filter(StringUtils::hasText).toArray(String[]::new);
+    }
+
+    private static boolean shouldNotExpand(final Class<?> c) {
+        final String pn = c.getPackageName();
+        return c.isEnum() || pn.startsWith("java.") || pn.startsWith("javax.") || pn.startsWith("jdk.");
     }
 
     private static List<String> getValidOperationsAndFlags() {
-        List<String> operationsAndFlags = new ArrayList<>(Arrays.asList(
-            DEBUG_FLAG,
+        final List<String> operationsAndFlags = new ArrayList<>(Arrays.asList(DEBUG_FLAG,
             QUIET_FLAG,
             COMMUNITY_FALLBACK_FLAG,
-            SUPPRESS_PROMPT_FLAG,
             SKIP_CHECK_FOR_UPDATE_FLAG,
             MIGRATIONS_IDS_FLAG,
+            OUTPUT_LOGS_IN_JSON,
             "help",
             "migrate",
             "clean",
@@ -103,15 +135,15 @@ public class CommandLineArguments {
         return operationsAndFlags;
     }
 
-    private static boolean isFlagSet(String[] args, String flag) {
+    private static boolean isFlagSet(final String[] args, final String flag) {
         return Arrays.asList(args).contains(flag);
     }
 
-    private static boolean isFlagSet(String[] args, List<String> flags) {
+    private static boolean isFlagSet(final String[] args, final List<String> flags) {
         return flags.stream().anyMatch(flag -> isFlagSet(args, flag));
     }
 
-    private static String getArgumentValue(String argName, String[] allArgs) {
+    private static String getArgumentValue(final String argName, final String[] allArgs) {
         return Arrays.stream(allArgs)
             .filter(arg -> arg.startsWith("-" + argName + "="))
             .findFirst()
@@ -119,19 +151,21 @@ public class CommandLineArguments {
             .orElse("");
     }
 
-    private static String parseConfigurationOptionValueFromArg(String arg) {
-        int index = arg.indexOf("=");
+    private static String parseConfigurationOptionValueFromArg(final String arg) {
+        final int index = arg.indexOf("=");
         if (index < 0 || index == arg.length()) {
             return "";
         }
         return arg.substring(index + 1);
     }
 
-    private List<String> getOperationsFromArgs(String[] args) {
-        List<String> flags = Arrays.stream(args).filter(x -> x.startsWith("-")).collect(Collectors.toList());
-        List<String> operations = Arrays.stream(args).filter(arg -> !arg.startsWith("-")).collect(Collectors.toList());
+    private List<String> getOperationsFromArgs(final String[] args) {
+        final List<String> flags = Arrays.stream(args).filter(x -> x.startsWith("-")).toList();
+        final List<String> operations = Arrays.stream(args)
+            .filter(arg -> !arg.startsWith("-"))
+            .collect(Collectors.toList());
 
-        pluginRegister.getPlugins(CommandExtension.class)
+        pluginRegister.getInstancesOf(CommandExtension.class)
             .forEach(extension -> flags.stream()
                 .map(extension::getCommandForFlag)
                 .filter(Objects::nonNull)
@@ -140,37 +174,22 @@ public class CommandLineArguments {
         return operations;
     }
 
-    private static List<String> getConfigFilesFromArgs(String[] args) {
+    private static List<String> getConfigFilesFromArgs(final String[] args) {
         return Arrays.stream(StringUtils.tokenizeToStringArray(getArgumentValue(CONFIG_FILES, args), ","))
             .filter(i -> !i.isEmpty())
             .collect(Collectors.toList());
     }
 
-    private static Map<String, String> getConfigurationFromArgs(String[] args, boolean isModernConfig) {
-        return Arrays.stream(args)
-            .filter(CommandLineArguments::isConfigurationArg)
-            .filter(arg -> !arg.startsWith("-" + CONFIG_FILES + "="))
-            .filter(arg -> !arg.startsWith("-" + CONFIG_FILE_ENCODING + "="))
-            .filter(arg -> !arg.startsWith("-environments."))
-            .filter(f -> !isConfigurationOptionCommandlineOnly(getConfigurationOptionNameFromArg(f)))
-            .collect(Collectors.toMap(p -> (Arrays.stream((EnvironmentModel.class).getDeclaredFields())
-                    .anyMatch(x -> x.getName().equals(getConfigurationOptionNameFromArg(p))) && isModernConfig
-                    ? "environments." + ClassicConfiguration.TEMP_ENVIRONMENT_NAME + "."
-                    : "flyway.")
-                    + getConfigurationOptionNameFromArg(p),
-                CommandLineArguments::parseConfigurationOptionValueFromArg));
-    }
-
-    private static Map<String, Map<String, String>> getEnvironmentConfigurationFromArgs(String[] args) {
-        Map<String, String> envConfigs = Arrays.stream(args)
+    private static Map<String, Map<String, String>> getEnvironmentConfigurationFromArgs(final String[] args) {
+        final Map<String, String> envConfigs = Arrays.stream(args)
             .filter(arg -> arg.toLowerCase().startsWith("-environments.") && arg.contains("="))
             .collect(Collectors.toMap(p -> getConfigurationOptionNameFromArg(p).substring("environments.".length()),
                 CommandLineArguments::parseConfigurationOptionValueFromArg));
 
-        Map<String, Map<String, String>> envConfigMap = new HashMap<>();
-        for (String envKey : envConfigs.keySet()) {
-            String envName = envKey.split("\\.")[0];
-            String envConfigKey = envKey.substring(envName.length() + 1);
+        final Map<String, Map<String, String>> envConfigMap = new HashMap<>();
+        for (final String envKey : envConfigs.keySet()) {
+            final String envName = envKey.split("\\.")[0];
+            final String envConfigKey = envKey.substring(envName.length() + 1);
             if (!envConfigMap.containsKey(envName)) {
                 envConfigMap.put(envName, new HashMap<>());
             }
@@ -180,29 +199,25 @@ public class CommandLineArguments {
         return envConfigMap;
     }
 
-    private static boolean isConfigurationOptionCommandlineOnly(String configurationOptionName) {
+    private static boolean isConfigurationOptionCommandlineOnly(final String configurationOptionName) {
         return COMMAND_LINE_ONLY_OPTIONS.contains(configurationOptionName);
     }
 
-    private static String getConfigurationOptionNameFromArg(String arg) {
+    private static String getConfigurationOptionNameFromArg(final String arg) {
         return arg.substring(1, arg.indexOf("="));
     }
 
-    private static String getEnvironmentNameFromArg(String arg) {
-        if (!arg.startsWith("-environments")) {
-            return null;
-        }
-        return arg.substring("-environments".length(), arg.indexOf("="));
+    private static String getTopNamespaceFromArg(final String arg) {
+        return arg.substring(1,
+            arg.contains(".") && arg.indexOf(".") < arg.indexOf("=") ? arg.indexOf(".") : arg.indexOf("="));
     }
 
-    private static boolean isConfigurationArg(String arg) {
+    private static boolean isConfigurationArg(final String arg) {
         return arg.startsWith("-") && arg.contains("=");
     }
 
     public List<String> getFlags() {
-        return Arrays.stream(args)
-            .filter(a -> a.startsWith("-") && !a.contains("="))
-            .collect(Collectors.toList());
+        return Arrays.stream(args).filter(a -> a.startsWith("-") && !a.contains("=")).collect(Collectors.toList());
     }
 
     public void validate() {
@@ -214,81 +229,112 @@ public class CommandLineArguments {
             .findAny()
             .ifPresent(i -> {
                 if (i < args.length - 1 && "=".equals(args[i + 1])) {
-                    throw new FlywayException("Invalid configuration argument: " + args[i]
+                    throw new FlywayException("Invalid configuration argument: "
+                        + args[i]
                         + ". Please check you have not included any spaces in your configuration argument.");
                 } else {
-                    throw new FlywayException("Invalid flag: " + args[i]);
+                    String hint = "";
+                    if (args.length > i + 1) {
+                        if (args[i + 1] != null && args[i + 1].startsWith(".")) {
+                            hint = "Shell may cause input parameters containing periods (.) to be misinterpreted - do you need to wrap your parameter in double quotes?";
+                        }
+                    }
+                    throw new FlywayException("Invalid flag: " + args[i] + "\n" + hint);
                 }
             });
 
-        String outputTypeValue = getArgumentValue(OUTPUT_TYPE, args).toLowerCase();
-
-        if (!("json".equals(outputTypeValue) || "".equals(outputTypeValue))) {
-            throw new FlywayException(
-                "'" + outputTypeValue + "' is an invalid value for the -outputType option. Use 'json'.");
+        final Optional<String> environmentArgument = Arrays.stream(args)
+            .filter(x -> x.startsWith("-environments"))
+            .filter(x -> x.contains("="))
+            .map(x -> x.substring(0, x.indexOf("=")))
+            .filter(x -> x.split("\\.").length == 2)
+            .findFirst();
+        if (environmentArgument.isPresent()) {
+            throw new FlywayException("Invalid configuration argument: "
+                + environmentArgument.get()
+                + ". Both the environment name and configuration option are required.");
         }
 
-        String colorArgumentValue = getArgumentValue(COLOR, args);
+        final String outputTypeValue = getArgumentValue(OUTPUT_TYPE, args).toLowerCase();
+
+        if (!("json".equals(outputTypeValue) || outputTypeValue.isEmpty())) {
+            throw new FlywayException("'"
+                + outputTypeValue
+                + "' is an invalid value for the -outputType option. Use 'json'.");
+        }
+
+        final String colorArgumentValue = getArgumentValue(COLOR, args);
 
         if (!Color.isValid(colorArgumentValue)) {
-            throw new FlywayException("'" + colorArgumentValue
+            throw new FlywayException("'"
+                + colorArgumentValue
                 + "' is an invalid value for the -color option. Use 'always', 'never', or 'auto'.");
+        }
+
+        final List<String> operations = getOperations();
+        if (operations.contains(McpCommandExtension.MCP_VERB)) {
+            if (operations.size() > 1) {
+                throw new FlywayException("The '"
+                    + McpCommandExtension.MCP_VERB
+                    + "' command cannot be used with any other commands.");
+            }
+            if (!outputTypeValue.isEmpty()) {
+                throw new FlywayException("The '"
+                    + McpCommandExtension.MCP_VERB
+                    + "' command does not support the -outputType option.");
+            }
         }
     }
 
-    private boolean isHandledByExtension(String arg) {
-        for (CommandExtension extension : pluginRegister.getPlugins(CommandExtension.class)) {
+    private boolean isHandledByExtension(final String arg) {
+        for (final CommandExtension<?> extension : pluginRegister.getInstancesOf(CommandExtension.class)) {
             if (extension.handlesCommand(arg) || extension.handlesParameter(arg)) {
                 return true;
             }
         }
-        return false;
-    }
 
-    public boolean shouldSuppressPrompt() {
-        return isFlagSet(args, SUPPRESS_PROMPT_FLAG);
+        return false;
     }
 
     public boolean shouldOutputJson() {
         return "json".equalsIgnoreCase(getArgumentValue(OUTPUT_TYPE, args));
     }
 
-    public PrintUsage shouldPrintUsage(StringBuilder helpText) {
+    public boolean shouldOutputLogsInJson() {
+        return "true".equalsIgnoreCase(getArgumentValue(OUTPUT_LOGS_IN_JSON, args));
+    }
+
+    public PrintUsage shouldPrintUsage(final StringBuilder helpText) {
 
         if (hasOperation("help") || isFlagSet(args, PRINT_USAGE_FLAGS)) {
 
             getHelpTextForOperations(helpText);
 
             return PrintUsage.PRINT_ORIGINAL;
-
         } else if (getOperations().isEmpty()) {
             return PrintUsage.PRINT_SHORT;
         } else {
             return PrintUsage.PRINT_NONE;
         }
-
-
     }
 
-    private void getHelpTextForOperations(StringBuilder helpText) {
+    private void getHelpTextForOperations(final StringBuilder helpText) {
 
         if (helpText == null) {
             return;
         }
 
-        for (String operation : getOperations()) {
-            String helpTextForOperation = pluginRegister.getPlugins(CommandExtension.class).stream()
+        for (final String operation : getOperations()) {
+            final String helpTextForOperation = pluginRegister.getInstancesOf(CommandExtension.class)
+                .stream()
                 .filter(e -> e.handlesCommand(operation))
-                .map(CommandExtension::getHelpText)
+                .map(e -> e.getHelpText(getFlags()))
                 .collect(Collectors.joining("\n\n"));
-
             if (StringUtils.hasText(helpTextForOperation)) {
                 helpText.append(helpTextForOperation).append("\n\n");
             }
         }
-
     }
-
 
     public Level getLogLevel() {
         if (isFlagSet(args, QUIET_FLAG)) {
@@ -304,7 +350,7 @@ public class CommandLineArguments {
         return isFlagSet(args, COMMUNITY_FALLBACK_FLAG);
     }
 
-    public boolean hasOperation(String operation) {
+    public boolean hasOperation(final String operation) {
         return getOperations().contains(operation);
     }
 
@@ -313,28 +359,28 @@ public class CommandLineArguments {
     }
 
     public List<String> getConfigFiles() {
-        String workingDirectory = getWorkingDirectoryOrNull();
+        final String workingDirectory = getWorkingDirectoryOrNull();
 
-        return getConfigFilesFromArgs(args)
-            .stream()
+        return getConfigFilesFromArgs(args).stream()
             .map(File::new)
-            .map(file -> !file.isAbsolute() && workingDirectory != null
-                ? new File(workingDirectory, file.getPath()).getAbsolutePath()
-                : file.getAbsolutePath())
+            .map(file -> !file.isAbsolute() && workingDirectory != null ? new File(workingDirectory,
+                file.getPath()).getAbsolutePath() : file.getAbsolutePath())
             .collect(Collectors.toList());
     }
 
-    public List<File> getConfigFilePathsFromEnv(boolean loadToml) {
-        String workingDirectory = getWorkingDirectoryOrNull();
-        String[] fileLocations = StringUtils.tokenizeToStringArray(System.getenv("FLYWAY_CONFIG_FILES"), ",");
+    public List<File> getConfigFilePathsFromEnv(final boolean loadToml) {
+        final String workingDirectory = getWorkingDirectoryOrNull();
+        final String[] fileLocations = StringUtils.tokenizeToStringArray(System.getenv("FLYWAY_CONFIG_FILES"), ",");
 
-        return fileLocations == null ? new ArrayList<>() : Arrays.stream(fileLocations)
-            .filter(loadToml ? f -> f.endsWith(".toml") : f -> !f.endsWith(".toml"))
-            .map(File::new)
-            .map(file -> !file.isAbsolute() && workingDirectory != null
-                ? new File(workingDirectory, file.getPath())
-                : file)
-            .collect(Collectors.toList());
+        return fileLocations == null
+            ? new ArrayList<>()
+            : Arrays.stream(fileLocations)
+              .filter(loadToml ? f -> f.endsWith(".toml") : f -> !f.endsWith(".toml"))
+              .map(File::new)
+              .map(file -> !file.isAbsolute() && workingDirectory != null
+                           ? new File(workingDirectory, file.getPath())
+                  : file)
+              .collect(Collectors.toList());
     }
 
     public String getOutputFile() {
@@ -366,7 +412,7 @@ public class CommandLineArguments {
     }
 
     public MigrationState[] getInfoOfState() {
-        String stateStr = getArgumentValue(INFO_OF_STATE, args);
+        final String stateStr = getArgumentValue(INFO_OF_STATE, args);
         if (!StringUtils.hasText(stateStr)) {
             return null;
         }
@@ -379,16 +425,16 @@ public class CommandLineArguments {
         return isFlagSet(args, MIGRATIONS_IDS_FLAG);
     }
 
-    private MigrationVersion parseVersion(String argument) {
-        String versionStr = getArgumentValue(argument, args);
+    private MigrationVersion parseVersion(final String argument) {
+        final String versionStr = getArgumentValue(argument, args);
         if (versionStr.isEmpty()) {
             return null;
         }
         return MigrationVersion.fromVersion(versionStr);
     }
 
-    private Date parseDate(String argument) {
-        String dateStr = getArgumentValue(argument, args);
+    private Date parseDate(final String argument) {
+        final String dateStr = getArgumentValue(argument, args);
 
         if (dateStr.isEmpty()) {
             return null;
@@ -396,10 +442,15 @@ public class CommandLineArguments {
 
         try {
             return DATE_FORMAT.parse(dateStr);
-        } catch (ParseException e) {
-            throw new FlywayException("'" + dateStr + "' is an invalid value for the " + argument + " option. " +
-                "The expected format is 'dd/mm/yyyy hh:mm', like '13/10/2020 16:30'. " +
-                "See the Flyway documentation for help: " + FlywayDbWebsiteLinks.FILTER_INFO_OUTPUT);
+        } catch (final ParseException e) {
+            throw new FlywayException("'"
+                + dateStr
+                + "' is an invalid value for the "
+                + argument
+                + " option. "
+                + "The expected format is 'dd/mm/yyyy hh:mm', like '13/10/2020 16:30'. "
+                + "See the Flyway documentation for help: "
+                + FlywayDbWebsiteLinks.FILTER_INFO_OUTPUT);
         }
     }
 
@@ -420,19 +471,87 @@ public class CommandLineArguments {
     }
 
     public boolean skipCheckForUpdate() {
-        return isFlagSet(args, SKIP_CHECK_FOR_UPDATE_FLAG);
+        return isFlagSet(args, SKIP_CHECK_FOR_UPDATE_FLAG) || hasOperation(McpCommandExtension.MCP_VERB);
+
     }
 
     public Color getColor() {
         return Color.fromString(getArgumentValue(COLOR, args));
     }
 
-    public Map<String, String> getConfiguration(boolean isModernConfig) {
-        return getConfigurationFromArgs(args, isModernConfig);
+    public Map<String, String> getConfiguration(final boolean isModernConfig) {
+        final String[] processedArgs = scopeParameters(args);
+
+        final List<String> rootNamespaces = pluginRegister.getInstancesOf(ConfigurationExtension.class)
+            .stream()
+            .filter(c -> c.getNamespace().startsWith("\\"))
+            .map(c -> c.getNamespace().substring(1))
+            .toList();
+
+        return Arrays.stream(processedArgs)
+            .filter(CommandLineArguments::isConfigurationArg)
+            .filter(arg -> !arg.startsWith("-" + CONFIG_FILES + "="))
+            .filter(arg -> !arg.startsWith("-" + CONFIG_FILE_ENCODING + "="))
+            .filter(arg -> !arg.startsWith("-environments."))
+            .filter(f -> !isConfigurationOptionCommandlineOnly(getConfigurationOptionNameFromArg(f)))
+            .collect(Collectors.toMap(p -> (Arrays.stream((EnvironmentModel.class).getDeclaredFields())
+                .anyMatch(x -> x.getName().equals(getConfigurationOptionNameFromArg(p))) && isModernConfig ?
+                "environments."
+                + ClassicConfiguration.TEMP_ENVIRONMENT_NAME
+                + "." : rootNamespaces.contains(getTopNamespaceFromArg(p)) ? "" : "flyway.")
+                + getConfigurationOptionNameFromArg(p), CommandLineArguments::parseConfigurationOptionValueFromArg));
+    }
+
+    private static String[] scopeParameters(final String[] args) {
+        String currentCommand = "";
+        String currentFlag = "";
+        final String[] processedArgs = new String[args.length];
+        for (int i = 0; i < args.length; i++) {
+            final String arg = args[i];
+            processedArgs[i] = arg;
+
+            if (!arg.startsWith("-")) {
+                currentCommand = arg;
+                currentFlag = "";
+            } else {
+                if (currentCommand.isEmpty()) {
+                    continue;
+                }
+
+                if (arg.contains("=")) {
+                    processedArgs[i] = scopeParameter(arg, currentCommand, currentFlag);
+                } else {
+                    currentFlag = arg.substring(1);
+                }
+            }
+        }
+        return processedArgs;
+    }
+
+    private static String scopeParameter(final String arg, final String currentCommand, final String currentFlag) {
+        final String paramName = arg.substring(1, arg.contains("=") ? arg.indexOf("=") : arg.length());
+        final String paramValue = arg.substring(arg.indexOf("=") + 1);
+        final var paramsInNamespace = getParametersByNamespace(currentCommand);
+        if (paramsInNamespace.contains(paramName)) {
+            final String replacedParamName = "-" + currentCommand + "." + paramName;
+            return replacedParamName + "=" + paramValue;
+        } else if (!currentFlag.isEmpty() && paramsInNamespace.contains(currentFlag + "." + paramName)) {
+            final String replacedParamName = "-" + currentCommand + "." + currentFlag + "." + paramName;
+            return replacedParamName + "=" + paramValue;
+        }
+
+        return arg;
     }
 
     public Map<String, Map<String, String>> getEnvironmentConfiguration() {
         return getEnvironmentConfigurationFromArgs(args);
+    }
+
+    public boolean shouldIgnoreUnrecognizedParameters() {
+        // The `init` command can update an existing TOML file to fix configuration errors.
+        // Only allow this when `init` is run on its own; if it is chained with other commands, do not allow it.
+        List<String> operations = getOperations();
+        return operations.contains("init") && operations.size() == 1;
     }
 
     @RequiredArgsConstructor
@@ -443,18 +562,15 @@ public class CommandLineArguments {
 
         private final String value;
 
-        public static Color fromString(String value) {
+        public static Color fromString(final String value) {
             if (value.isEmpty()) {
                 return AUTO;
             }
 
-            return Arrays.stream(values())
-                .filter(color -> color.value.equals(value))
-                .findFirst()
-                .orElse(null);
+            return Arrays.stream(values()).filter(color -> color.value.equals(value)).findFirst().orElse(null);
         }
 
-        public static boolean isValid(String value) {
+        public static boolean isValid(final String value) {
             return fromString(value) != null;
         }
     }
